// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebpackNotifierPlugin one compilation ["error"] {}: after "error" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Error: /entry.js
SyntaxError: Unexpected token (1:8)",
  "title": undefined,
}
`;

exports[`WebpackNotifierPlugin one compilation ["successful"] {}: after "successful" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Build successful",
  "title": undefined,
}
`;

exports[`WebpackNotifierPlugin one compilation ["warning"] {}: after "warning" build 1`] = `
Object {
  "contentImage": "__dirname/logo.png",
  "message": "Warning: /entry.js
require.extensions is not supported by webpack. Use a loader instead.",
  "title": undefined,
}
`;
